# irls-sdk-python

./: README.md  debug_api.py  pyproject.toml  test_local.py
examples/: aml_ctd_ex.py  async_example.py  ctd_example.py  error_handling.py  full_navigation.py  simple_gps.py
src/irls/: __init__.py  client.py  exceptions.py
src/irls/dto/: __init__.py  aml_ctd.py  common.py  ctd.py  position.py
src/irls/sensors/: __init__.py  aml_ctd.py  ctd.py  position.py
tests/unit/: test_ctd_dto.py  test_dto.py  test_dto_ctd.py  test_exceptions.py
